# Current changes.
* Minor enhancements to the manual:
  - sections 1.1 and 1.2 added
