@@ -85,8 +85,15 @@ Thank you very much.
 <hr>
 <h2 id="user_manual">The User's Manual</h2>
 <hr>
-<p><font color=red><b>We are experiencing some troubles with the epub version. Stay tuned for more soon.</b></font></p>
-<p>The epub version is still experimental. We recommend <a href="http://calibre-ebook.com/">calibre</a> to view the epub version. With this version, you should be able to convert the manual to the right format for your preferred handheld device.</p>
+<p>The epub version is still experimental. We strongly recommend <a href="http://calibre-ebook.com/">calibre (ebook-viewer)</a> whenever possible to view the epub version. 
+With this version, you should be able to convert the manual to the right format for your preferred hand-held device.For instance, to transform the epub version 
+into a mobi version:
+<div align="center">
+ebook-convert   &nbsp;&nbsp;&nbsp;user_manual.v.x.y.z.epub  &nbsp;&nbsp;&nbsp; user_manual.v.x.y.z.mobi
+</div>
+</br>
+We also recommend to use the epub version as it is currently the best available ebook format. 
+</p>
 
 <h4>The manual</h4>
 <ul>
