@@ -1,0 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.
+w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>Walden_cc.xhtml</title>
+<link href="epub.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+<div>
+<img src="_static/user_manual_cover.jpeg" alt="Google or-tools user's manual" style="max-width: 100%;" />
+</div>
+</body>
+</html>
+
