@@ -3,6 +3,26 @@
 It's always a matter of tradeoffs
 ---------------------------------
 
+..  only:: draft
+
+    This manual is about the *or-tools* library and its working but along the way, we also try to give you 
+    a glimpse of the best practices.
+
+    ..  topic:: The good optimization researcher's motto:
+    
+        :math:`\text{It's always a matter of tradeoffs}`
+    
+    This motto is a shorcut to describe a few basic and common ideas in research that are 
+    often forgotten or put aside but that can be life-saving when consistently adopted. We will
+    refer to this motto from time to time in this manual.
+
+    Ultimatetely, you are best aware of your problem and the (limited) ressources you have to solve it. 
+    As we said:
+    
+    ..  math::
+    
+        \text{It's all a matter of tradeoffs.}
+
 ..  raw:: html
     
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
